Fixed overflowing images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 
 /* Global */
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   font-family: "Source Serif Pro", serif;
   position: relative;
   user-select: none;
@@ -816,8 +816,8 @@ body {
         position: relative;
 
         img {
-          width: 350px;
-          height: 350px;
+          width: 100%;
+          height: 100%;
           object-fit: cover;
         }
 
